--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,14 @@
 {
-  "extends": "airbnb",
+  "extends": [
+    "airbnb",
+    "plugin:cypress/recommended"
+  ],
   "parser": "babel-eslint",
   "env": {
     "browser": true,
     "node": true,
-    "mocha": true
+    "mocha": true,
+    "cypress/globals": true
   },
   "plugins": [
     "jsdoc"
