--- a/.eslintrc
+++ b/.eslintrc
@@ -7,8 +7,7 @@
   "env": {
     "browser": true,
     "node": true,
-    "mocha": true,
-    "cypress/globals": true
+    "mocha": true
   },
   "plugins": [
     "jsdoc"
