--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "install-deps:frontend": "cd frontend && npm install",
     "install-deps:backend": "cd backend && npm install",
     "postinstall": "npm run install-deps",
-    "test": "cypress open",
-    "test:headless": "cypress run",
-    "ci": "start-server-and-test start :3000 test:headless",
-    "ci:dev": "start-server-and-test start :3000 test",
+    "cypress": "cypress open",
+    "cypress:headless": "cypress run",
+    "test": "start-server-and-test start :3000 cypress:headless",
+    "test:dev": "start-server-and-test start :3000 cypress",
     "lint:frontend":"cd frontend && npm run lint",
     "lint:backend":"cd backend && npm run lint",
     "lint":"npm-run-all -l -p lint:*"
