--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,8 +9,8 @@ on:
       - dev
 
 jobs:
-  ci:
-    name: Lint and Test
+  lint:
+    name: Lint
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
@@ -35,11 +35,16 @@ jobs:
     - name: Lint
       run: npm run lint
 
+  tests:
+    name: E2E Tests
+    runs-on: ubuntu-latest
+    needs: lint
+    steps:   
     - name: Tests
       uses: cypress-io/github-action@v2
       with:
           headless: true
-          command: npm run ci
+          command: npm run test
 
     - name: Upload Video
       uses: actions/upload-artifact@v1
