--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,8 +9,8 @@ on:
       - dev
 
 jobs:
-  lint:
-    name: Lint
+  ci:
+    name: Lint and Test
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
@@ -32,22 +32,12 @@ jobs:
     - name: Install npm dependencies
       run: npm ci
 
-    - name: Lint
-      run: npm run lint
-
-  tests:
-    name: E2E Tests
-    runs-on: ubuntu-latest
-    needs: lint
-    steps:   
-    - name: Tests
-      uses: cypress-io/github-action@v2
-      with:
-          headless: true
-          command: npm run test
+    - name: Test
+      run: npm run test
 
     - name: Upload Video
       uses: actions/upload-artifact@v1
+      if: always()
       with:
         name: cypress-videos
         path: cypress/videos
